[package]
name = "pistol"
version = "4.0.17"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Rust Library about Cybersecurity"
homepage = "https://github.com/rikonaka/pistol-rs"
documentation = "https://docs.rs/pistol"
repository = "https://github.com/rikonaka/pistol-rs"
readme = "README.md"
keywords = ["penetration-test", "cybersecurity", "nmap"]

[dependencies]
num_cpus = "^1"
rand = "^0"
subnetwork = "^0"
threadpool = "^1"
chrono = "^0"
gcdx = "^0"
crc32fast = "^1"
hex = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
dns-lookup = "^3"
fancy-regex = "^0"
pnet = { version = "^0", features = ["serde"] }
prettytable-rs = "^0"
regex = "^1"
thiserror = "^2"
zip = "^4"
escape-bytes = "^0"
pcapture = "^0"
uuid = { version = "1", features = ["v4"] }
tracing = "^0"
tracing-subscriber = "^0"

[features]
# default = ["scan"]
# default = ["ping"]
# default = ["flood"]
# default = ["os"]
# default = ["vs"]
# default = ["trace"]
default = ["scan", "ping", "flood", "os", "vs", "trace"]
scan = []
ping = []
flood = []
os = []
vs = []
trace = []
