[package]
name = "pistol"
version = "5.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Rust Library about Cybersecurity"
homepage = "https://github.com/rikonaka/pistol-rs"
documentation = "https://docs.rs/pistol"
repository = "https://github.com/rikonaka/pistol-rs"
readme = "README.md"
keywords = ["pentest", "cyber", "nmap", "scan", "security"]

[dependencies]
hex = "^0"
zip = "^4"
rand = "^0"
gcdx = "^0"
regex = "^1"
chrono = "^0"
tracing = "^0"
num_cpus = "^1"
crc32fast = "^1"
thiserror = "^2"
crossbeam = "^0"
serde_json = "^1"
dns-lookup = "^3"
subnetwork = "^0"
threadpool = "^1"
fancy-regex = "^0"
escape-bytes = "^0"
prettytable-rs = "^0"
tracing-subscriber = "^0"
pnet = { version = "^0", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
pcapture = { version = "^0", features = ["pcapng", "libpcap"] }

[features]
default = ["scan", "ping", "flood", "os", "vs", "trace"]
dev = ["scan", "ping", "flood", "os", "vs", "trace", "debug"]
scan = []
ping = []
flood = []
os = []
vs = []
trace = []
debug = []
